# obs-color-wipe-transitions

./: CMakeLists.txt  README.md  transition-animated-wipe.c
data/: animated_wipe_transition.effect
data/animated_wipes/: wipes.json
